# microdnf

./: .packit.yaml  CMakeLists.txt  README.md  meson.build  microdnf.spec
.github/workflows/: ci.yml
cmake/: GResource.cmake
dnf/: CMakeLists.txt  dnf-command.c  dnf-command.h  dnf-main.c  dnf-utils.c  dnf-utils.h  meson.build
dnf/plugins/clean/: clean.plugin  dnf-command-clean.c  dnf-command-clean.gresource.xml  dnf-command-clean.h
dnf/plugins/distrosync/: distrosync.plugin  dnf-command-distrosync.c  dnf-command-distrosync.gresource.xml  dnf-command-distrosync.h
dnf/plugins/download/: dnf-command-download.c  dnf-command-download.gresource.xml  dnf-command-download.h  download.plugin
dnf/plugins/install/: dnf-command-install.c  dnf-command-install.gresource.xml  dnf-command-install.h  install.plugin
dnf/plugins/leaves/: dnf-command-leaves.c  dnf-command-leaves.gresource.xml  dnf-command-leaves.h  leaves.plugin
dnf/plugins/makecache/: dnf-command-makecache.c  dnf-command-makecache.gresource.xml  dnf-command-makecache.h  makecache.plugin
dnf/plugins/module_disable/: dnf-command-module_disable.c  dnf-command-module_disable.gresource.xml  dnf-command-module_disable.h  module_disable.plugin
dnf/plugins/module_enable/: dnf-command-module_enable.c  dnf-command-module_enable.gresource.xml  dnf-command-module_enable.h  module_enable.plugin
dnf/plugins/module_reset/: dnf-command-module_reset.c  dnf-command-module_reset.gresource.xml  dnf-command-module_reset.h  module_reset.plugin
dnf/plugins/moduleenable/: dnf-command-moduleenable.c  dnf-command-moduleenable.gresource.xml  dnf-command-moduleenable.h  moduleenable.plugin
dnf/plugins/reinstall/: dnf-command-reinstall.c  dnf-command-reinstall.gresource.xml  dnf-command-reinstall.h  reinstall.plugin
dnf/plugins/remove/: dnf-command-remove.c  dnf-command-remove.gresource.xml  dnf-command-remove.h  remove.plugin
dnf/plugins/repolist/: dnf-command-repolist.c  dnf-command-repolist.gresource.xml  dnf-command-repolist.h  repolist.plugin
dnf/plugins/repoquery/: dnf-command-repoquery.c  dnf-command-repoquery.gresource.xml  dnf-command-repoquery.h  repoquery.plugin
dnf/plugins/swap/: dnf-command-swap.c  dnf-command-swap.gresource.xml  dnf-command-swap.h  swap.plugin
dnf/plugins/update/: dnf-command-update.c  dnf-command-update.gresource.xml  dnf-command-update.h  update.plugin
dnf/plugins/upgrade/: dnf-command-upgrade.c  dnf-command-upgrade.gresource.xml  dnf-command-upgrade.h  upgrade.plugin
